--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,10 @@
             <artifactId>hibernate-validator</artifactId>
             <version>6.1.3.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
 
     </dependencies>
 
