--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,25 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/traveling_agency?serverTimezon
 spring.datasource.username=root
 spring.datasource.password=root
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+# Specify the DBMS
+spring.jpa.database = MYSQL
+# Show or not log for each sql query
+spring.jpa.show-sql = true
+#create-drop| update | validate | none
+spring.jpa.hibernate.ddl-auto = update
 
-spring.security.user.name=admin
-spring.security.user.password=admin
+# SQL dialect for generating optimized queries
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
-urlAddress.travelAgency=http://localhost:8080/TravelAgency/api/tours
+
+uploadDir=/resources
+
+#Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=200MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
 
